--- a/Models.tex
+++ b/Models.tex
@@ -75,7 +75,7 @@ Flux-dev \cite{Flux} is a publicly available, guidance-distilled rectified flow 
 Flux-dev is based on a multi-modal diffusion transformer (\gls{MMDiT}) \cite{SD3} architecture containing 19 double-stream blocks followed by 38 single-stream blocks (see fig. \ref{FluxOverview}) adding up to a total of 11.9 billion parameters (see tab. \ref{Flux_parameter_count}). For prompt processing,  it leverages two distinct text encoders, namely CLIP ViT-L/14 \cite{CLIP} and T5-XXL \cite{T5XXL}. For image encoding a \gls{VAE} is used compressing the height $H$ and width $W$ of the image by a factor of eight. Each double-stream block has mainly four inputs: a guidance vector, the positional information of the image patches and the text tokens as well as the text and the image hidden states. Hereby, the text and the image are processed seperately in two distinct streams allwoing the model to apply modality-specific weights. This dual-path approach is the defining characteristic of a \gls{MMDiT}. In contrast, the single-stream blocks have only three inputs as they combine the text and image hidden states and process them together.  \\
 
 The \textbf{guidance vector} is a combination of the timestep, a guidance parameter and the pooled vector of the clip embedding. In guidance distillation, the model is trained to simulate classifier free guidance internally. This speeds up the inference process because in contrast to classifier free guidance where the model is applied twice per inference step only one inference pass per step is needed. The guidance is a scalar which corresponds to the guidance scale in standard classifier free guidance. First, the guidance parameter and the timestep are embedded via \gls{MLP}s  into high dimensional tensors which are summed together. Then the pooled clip vector for the text prompt is embedded via another MLP and added. The resulting vector, called guidance vector, is injected via modulation in every double-stream and every single-stream block. \\
-Another input to both block types is the concatenated \textbf{positional encoding} for the text prompt and the image. First, based on the latent representation of the image, 3D coordinates for the position of every patch in the image is created. The 3D vector for the image represents the 2D positional IDs $(x,y)$ of the patch in the image and a time dimension $t$ for the possibility to adapt Flux-dev for videos. However, for image generation the time dimension is always set to zero. Positional IDs are also assigned to text tokens representing their sequential order and concatenated with the image IDs to jointly apply a positional embedding. In contrast to Pixart models, Flux-dev uses rotary positional embedding (\gls{RoPE}) \cite{RoPE}. The embedded vector is then used in the attention mechanism to rotate the key and query vectors such as the spatial relationships within the image and the sequential structure of the text are preserved. \\
+Another input to both block types is the concatenated \textbf{positional encoding} for the text prompt and the image. First, based on the latent representation of the image, 3D coordinates for the position of every patch in the image is created. The 3D vector for the image represents the 2D positional IDs $(x,y)$ of the patch in the image and a time dimension $t$ for the possibility to adapt Flux-dev for videos. However, for image generation the time dimension is always set to zero. Text position IDs are included for architectural consistency but are initialized to zero, as text tokens lack meaningful 2D spatial coordinates in a latent image grid. In contrast to Pixart models, Flux-dev uses rotary positional embedding (\gls{RoPE}) \cite{RoPE}. The embedded vector is then used in the attention mechanism to rotate the key and query vectors such as the spatial relationships within the image and the sequential structure of the text are preserved. \\
 For the text embedding, the \textbf{text prompt} is tokenized into $512$ tokens such that the model is  capable of processing long and detailed prompts. The T5-XXL encoder embeds the tokens into high-dimensional vectors $(1,512,4096)$ and a linear projection is applied before it is fed into the first double-stream block. The following double-stream blocks always receive the hidden states of the text from the previous block. \\
 The \textbf{image} $(3,H,W)$ is encoded via \gls{VAE} to a latent representation $(16,h=\frac{H}{8}, w=\frac{W}{8})$. To prepare the latents for the transformer, Flux-dev packs $2 \times 2$ neighboring latent pixels into a single patch and therefore increasing the dimension from $16$ to $64$ during the patchify operation while simultaneously reducing the sequence length $N$ to $\frac{h}{2} \cdot \frac{w}{2}$ $(1,N=\frac{h}{2} \cdot \frac{w}{2}, 64)$. These patches are then linearly projected into a higher dimensional embedding space before being fed into the first double block.  \\
 The output, sepcifically the text and image hidden states, of the 19th double-stream block  are concatenated and used as single input to the first single-stream block.
