--- a/bibliography.bib
+++ b/bibliography.bib
@@ -47,6 +47,56 @@
 	year={2022}
 }
 
+@inproceedings{TinyFusion,
+	title={Tinyfusion: Diffusion transformers learned shallow},
+	author={Fang, Gongfan and Li, Kunjun and Ma, Xinyin and Wang, Xinchao},
+	booktitle={Proceedings of the Computer Vision and Pattern Recognition Conference},
+	pages={18144--18154},
+	year={2025}
+}
+
+@article{MNIST,
+	title={Gradient-based learning applied to document recognition},
+	author={LeCun, Yann and Bottou, L{\'e}on and Bengio, Yoshua and Haffner, Patrick},
+	journal={Proceedings of the IEEE},
+	volume={86},
+	number={11},
+	pages={2278--2324},
+	year={2002},
+	publisher={Ieee}
+}
+
+@misc{flux_mini_2024,
+	author = {{TencentARC}},
+	title = {flux-mini},
+	year = {2024},
+	publisher = {Hugging Face},
+	howpublished = {\url{https://huggingface.co/TencentARC/flux-mini}},
+	note = {Hugging Face Model Hub}
+}
+
+@article{flux1-lite,
+	title={Flux.1 Lite: Distilling Flux1.dev for Efficient Text-to-Image Generation},
+	author={Daniel Verdú, Javier Martín},
+	email={dverdu@freepik.com, javier.martin@freepik.com},
+	year={2024},
+}
+
+
+@inproceedings{Dense2MoE,
+	title={Dense2moe: Restructuring diffusion transformer to moe for efficient text-to-image generation},
+	author={Zheng, Youwei and Ren, Yuxi and Xia, Xin and Xiao, Xuefeng and Xie, Xiaohua},
+	booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
+	pages={18661--18670},
+	year={2025}
+}
+
+@article{ma2025pluggable,
+	title={Pluggable Pruning with Contiguous Layer Distillation for Diffusion Transformers},
+	author={Ma, Jian and Peng, Qirong and Zhu, Xujie and Xie, Peixing and Chen, Chen and Lu, Haonan},
+	journal={arXiv preprint arXiv:2511.16156},
+	year={2025}
+}
 @article{mplug,
 	title={mPLUG: Effective and Efficient Vision-Language Learning by Cross-modal Skip-connections. arXiv 2022},
 	author={Li, C and Xu, H and Tian, J and Wang, W and Yan, M and Bi, B and Ye, J and Chen, H and Xu, G and Cao, Z and others},
@@ -55,6 +105,12 @@
 	year={2022}
 }
 
+@article{KnowledgeDistillation,
+	title={Distilling the knowledge in a neural network},
+	author={Hinton, Geoffrey and Vinyals, Oriol and Dean, Jeff},
+	journal={arXiv preprint arXiv:1503.02531},
+	year={2015}
+}
 @inproceedings{Objects365,
 	title={Objects365: A large-scale, high-quality dataset for object detection},
 	author={Shao, Shuai and Li, Zeming and Zhang, Tianyuan and Peng, Chao and Yu, Gang and Zhang, Xiangyu and Li, Jing and Sun, Jian},
