--- a/main.tex
+++ b/main.tex
@@ -36,9 +36,10 @@
 \include{theory_metrics}
 \include{Models}
 
+\include{Related_Work}
 
-\include{experiments}
-\include{results}
+\include{Pixart_Exp}
+\include{Flux_Exp}
 \include{conclusion}
 
 \bibliographystyle{plainurl}        % or apalike, unsrt, etc.
