--- a/bibliography.bib
+++ b/bibliography.bib
@@ -66,6 +66,66 @@
 	publisher={Ieee}
 }
 
+@article{men2024shortgpt,
+	title={Shortgpt: Layers in large language models are more redundant than you expect, 2024},
+	author={Men, Xin and Xu, Mingyu and Zhang, Qingyu and Wang, Bingning and Lin, Hongyu and Lu, Yaojie and Han, Xianpei and Chen, Weipeng},
+	journal={URL https://arxiv. org/abs/2403.03853},
+	volume={2},
+	number={3},
+	pages={4},
+	year={2024}
+}
+
+@inproceedings{pons2024effective,
+	title={Effective layer pruning through similarity metric perspective},
+	author={Pons, Ian and Yamamoto, Bruno and Reali Costa, Anna H and Jordao, Artur},
+	booktitle={International Conference on Pattern Recognition},
+	pages={423--438},
+	year={2024},
+	organization={Springer}
+}
+
+@inproceedings{fang2025tinyfusion,
+	title={Tinyfusion: Diffusion transformers learned shallow},
+	author={Fang, Gongfan and Li, Kunjun and Ma, Xinyin and Wang, Xinchao},
+	booktitle={Proceedings of the Computer Vision and Pattern Recognition Conference},
+	pages={18144--18154},
+	year={2025}
+}
+
+
+@inproceedings{kornblith2019similarity,
+	title={Similarity of neural network representations revisited},
+	author={Kornblith, Simon and Norouzi, Mohammad and Lee, Honglak and Hinton, Geoffrey},
+	booktitle={International conference on machine learning},
+	pages={3519--3529},
+	year={2019},
+	organization={PMlR}
+}
+
+@article{lee2020layer,
+	title={Layer-adaptive sparsity for the magnitude-based pruning},
+	author={Lee, Jaeho and Park, Sejun and Mo, Sangwoo and Ahn, Sungsoo and Shin, Jinwoo},
+	journal={arXiv preprint arXiv:2010.07611},
+	year={2020}
+}
+
+
+@article{filters2016pruning,
+	title={Pruning filters for efficient convnets},
+	author={Filters’Importance, Determine},
+	journal={arXiv preprint arXiv:1608.08710},
+	year={2016}
+}
+
+@article{han2015learning,
+	title={Learning both weights and connections for efficient neural network},
+	author={Han, Song and Pool, Jeff and Tran, John and Dally, William},
+	journal={Advances in neural information processing systems},
+	volume={28},
+	year={2015}
+}
+
 @misc{flux_mini_2024,
 	author = {{TencentARC}},
 	title = {flux-mini},
