--- a/glossary.tex
+++ b/glossary.tex
@@ -51,6 +51,12 @@
 	description={Maximum Mean Discrepancy}
 }
 
+\newglossaryentry{CKA}
+{
+	name=CKA,
+	description={Central Kernal Alignment}
+}
+
 \newglossaryentry{DPG}
 {
 	name=DPG,
