--- a/main.tex
+++ b/main.tex
@@ -41,7 +41,7 @@
 \include{Pixart_Exp}
 \include{Flux_Exp}
 \include{conclusion}
-
+\include{Appendix}
 \bibliographystyle{plainurl}        % or apalike, unsrt, etc.
 \bibliography{bibliography} 
 
