--- a/main.tex
+++ b/main.tex
@@ -34,12 +34,12 @@
 \include{theory_fundamental_NN}
 \include{Distillation}
 \include{theory_metrics}
-\include{Models}
-
 \include{Related_Work}
+\include{Methods_Models}
 
-\include{Pixart_Exp}
-\include{Flux_Exp}
+
+\include{Methods_Experiments}
+\include{Experiments}
 \include{conclusion}
 \include{Appendix}
 \bibliographystyle{plainurl}        % or apalike, unsrt, etc.
