--- a/bibliography.bib
+++ b/bibliography.bib
@@ -110,6 +110,21 @@
 	year={2020}
 }
 
+@inproceedings{akiba2019optuna,
+	title={Optuna: A next-generation hyperparameter optimization framework},
+	author={Akiba, Takuya and Sano, Shotaro and Yanase, Toshihiko and Ohta, Takeru and Koyama, Masanori},
+	booktitle={Proceedings of the 25th ACM SIGKDD international conference on knowledge discovery \& data mining},
+	pages={2623--2631},
+	year={2019}
+}
+
+@article{bergstra2011algorithms,
+	title={Algorithms for hyper-parameter optimization},
+	author={Bergstra, James and Bardenet, R{\'e}mi and Bengio, Yoshua and K{\'e}gl, Bal{\'a}zs},
+	journal={Advances in neural information processing systems},
+	volume={24},
+	year={2011}
+}
 
 @article{filters2016pruning,
 	title={Pruning filters for efficient convnets},
