--- a/bibliography.bib
+++ b/bibliography.bib
@@ -76,6 +76,16 @@
 	year={2024}
 }
 
+@article{hu2022lora,
+	title={Lora: Low-rank adaptation of large language models.},
+	author={Hu, Edward J and Shen, Yelong and Wallis, Phillip and Allen-Zhu, Zeyuan and Li, Yuanzhi and Wang, Shean and Wang, Lu and Chen, Weizhu and others},
+	journal={ICLR},
+	volume={1},
+	number={2},
+	pages={3},
+	year={2022}
+}\\
+
 @inproceedings{pons2024effective,
 	title={Effective layer pruning through similarity metric perspective},
 	author={Pons, Ian and Yamamoto, Bruno and Reali Costa, Anna H and Jordao, Artur},
@@ -83,6 +93,13 @@
 	pages={423--438},
 	year={2024},
 	organization={Springer}
+}
+
+@article{jang2016categorical,
+	title={Categorical reparameterization with gumbel-softmax},
+	author={Jang, Eric and Gu, Shixiang and Poole, Ben},
+	journal={arXiv preprint arXiv:1611.01144},
+	year={2016}
 }
 
 @inproceedings{fang2025tinyfusion,
@@ -93,7 +110,21 @@
 	year={2025}
 }
 
+@article{davari2022reliability,
+	title={Reliability of cka as a similarity measure in deep learning},
+	author={Davari, MohammadReza and Horoi, Stefan and Natik, Amine and Lajoie, Guillaume and Wolf, Guy and Belilovsky, Eugene},
+	journal={arXiv preprint arXiv:2210.16156},
+	year={2022}
+}
 
+@inproceedings{gretton2005measuring,
+	title={Measuring statistical dependence with Hilbert-Schmidt norms},
+	author={Gretton, Arthur and Bousquet, Olivier and Smola, Alex and Sch{\"o}lkopf, Bernhard},
+	booktitle={International conference on algorithmic learning theory},
+	pages={63--77},
+	year={2005},
+	organization={Springer}
+}
 @inproceedings{kornblith2019similarity,
 	title={Similarity of neural network representations revisited},
 	author={Kornblith, Simon and Norouzi, Mohammad and Lee, Honglak and Hinton, Geoffrey},
