--- a/glossary.tex
+++ b/glossary.tex
@@ -57,6 +57,18 @@
 	description={Central Kernal Alignment}
 }
 
+\newglossaryentry{LoRA}
+{
+	name=LoRA,
+	description={Low-Rank Adaptation}
+}
+
+\newglossaryentry{HSIC}
+{
+	name=HSIC,
+	description={Hilbert-Schmidt Independence Criterion}
+}
+
 \newglossaryentry{DPG}
 {
 	name=DPG,
