--- a/bibliography.bib
+++ b/bibliography.bib
@@ -76,6 +76,57 @@
 	year={2024}
 }
 
+@misc{li2024playground,
+	title={Playground v2.5: Three Insights towards Enhancing Aesthetic Quality in Text-to-Image Generation}, 
+	author={Daiqing Li and Aleks Kamko and Ehsan Akhgari and Ali Sabet and Linmiao Xu and Suhail Doshi},
+	year={2024},
+	eprint={2402.17245},
+	archivePrefix={arXiv},
+	primaryClass={cs.CV}
+}
+
+
+@inproceedings{cordts2016cityscapes,
+	title={The cityscapes dataset for semantic urban scene understanding},
+	author={Cordts, Marius and Omran, Mohamed and Ramos, Sebastian and Rehfeld, Timo and Enzweiler, Markus and Benenson, Rodrigo and Franke, Uwe and Roth, Stefan and Schiele, Bernt},
+	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+	pages={3213--3223},
+	year={2016}
+}
+
+@inproceedings{neuhold2017mapillary,
+	title={The mapillary vistas dataset for semantic understanding of street scenes},
+	author={Neuhold, Gerhard and Ollmann, Tobias and Rota Bulo, Samuel and Kontschieder, Peter},
+	booktitle={Proceedings of the IEEE international conference on computer vision},
+	pages={4990--4999},
+	year={2017}
+}
+
+@article{schuhmann2022laion,
+	title={Laion-5b: An open large-scale dataset for training next generation image-text models},
+	author={Schuhmann, Christoph and Beaumont, Romain and Vencu, Richard and Gordon, Cade and Wightman, Ross and Cherti, Mehdi and Coombes, Theo and Katta, Aarush and Mullis, Clayton and Wortsman, Mitchell and others},
+	journal={Advances in neural information processing systems},
+	volume={35},
+	pages={25278--25294},
+	year={2022}
+}
+
+@misc{fpgaminer2024joycaption,
+	author       = {fpgaminer},
+	title        = {{JoyCaption}: An open, uncensored Image Captioning {VLM}},
+	howpublished = {\url{https://github.com/fpgaminer/joycaption}},
+	year         = {2024},
+	note         = {Accessed: 2026-01-22}
+}
+
+@misc{schuhmann2022laionaesthetic,
+	author       = {Schuhmann, Christoph and Beaumont, Romain and Vencu, Richard and Gordon, Cade and Wightman, Ross and Cherti, Mehdi and Coombes, Theo and Katta, Aarush and Mullis, Clayton and Wortsman, Mitchell and others},
+	title        = {{LAION-Aesthetic} V1},
+	howpublished = {\url{https://github.com/LAION-AI/laion-datasets/blob/main/laion-aesthetic.md}},
+	year         = {2022},
+	note         = {Accessed: 2026-01-22}
+}
+
 @article{hu2022lora,
 	title={Lora: Low-rank adaptation of large language models.},
 	author={Hu, Edward J and Shen, Yelong and Wallis, Phillip and Allen-Zhu, Zeyuan and Li, Yuanzhi and Wang, Shean and Wang, Lu and Chen, Weizhu and others},
